(PC-21889)[PRO] fix: text alignment in recurrence form

--- a/pro/src/screens/OfferIndividual/StocksEventCreation/RecurrenceForm.module.scss
+++ b/pro/src/screens/OfferIndividual/StocksEventCreation/RecurrenceForm.module.scss
@@ -53,14 +53,7 @@
 }
 
 .align-icon {
-  // "Center" with input
-  // We are using margin-top and not flex center because when there is an error the
-  // input field grows at the bottom and we don't want the icon to move
-  // stylelint-disable scss/operator-no-newline-after
-  margin-top: calc(
-    #{fonts.$body-line-height} + #{forms.$label-space-before-input} +
-      (#{size.$input-min-height} - #{size.$button-icon-size}) / 2
-  );
+  @include size.input-center-with-top-margin(size.$button-icon-size);
 }
 
 .date-input {
@@ -82,13 +75,16 @@
 
 .booking-date-limit-container {
   display: flex;
-  align-items: center;
   gap: rem.torem(8px);
 }
 
 .booking-date-limit-input {
   width: rem.torem(72px);
   margin-bottom: 0;
+}
+
+.booking-date-limit-text {
+  @include size.input-center-with-top-margin(fonts.$body-font-size, true);
 }
 
 // Temporary code
